--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,29 @@
+@import url('https://fonts.googleapis.com/css?family=Baloo+Tammudu|Open+Sans|Permanent+Marker|Righteous');
+/* font-family: 'Open Sans', sans-serif; */
+/* font-family: 'Baloo Tammudu', cursive; */
+/* font-family: 'Righteous', cursive; */
+/* font-family: 'Permanent Marker', cursive; */
 
+
+.search-container {
+    border: 1px solid black;
+    height: 55px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #8AA2A9;
+}
+
+
+
+.search-button {
+    border: 1px solid black;
+    height: 8px;
+    border-radius: 4px;
+    font-family: 'Righteous', cursive;
+}
+
+.nav-bar span {
+    margin-right: 2em;
+    font-family: 'Righteous', cursive;
+}
