--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,12 @@
     padding: 3em;
 }
 
+.movies-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .movies {
     display: flex;
     flex-wrap: wrap;
