--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,16 @@
     justify-content: center;
 }
 
+.movie-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.movie img {
+    border-radius: .5em;
+}
+
 .movie {
     display: flex;
     flex-direction: column;
@@ -56,6 +66,6 @@
     margin: 2em;
 }
 
-.movie img {
-    border-radius: .5em;
+.center {
+    text-align: center;
 }
