--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,18 @@
     align-items: center;
 }
 
+.intro-display {
+    font-family: 'Baloo Tammudu', cursive;
+    font-size: 2em;
+    padding-top: 2em;
+}
+
+.featured-intro {
+    font-family: 'Baloo Tammudu', cursive;
+    font-size: 2em;  
+}
+
+
 .movies {
     display: flex;
     flex-wrap: wrap;
@@ -59,3 +71,11 @@
 .movie img {
     border-radius: .5em;
 }
+
+.movie-title {
+    font-family: 'Permanent Marker', cursive;
+    text-decoration: none;
+    padding: 1em;
+    font-size: 18px;
+}
+
