--- a/src/App.css
+++ b/src/App.css
@@ -79,3 +79,12 @@
     font-size: 18px;
 }
 
+.favorite-button {
+    /* border: 2px solid black; */
+    font-family: 'Permanent Marker', cursive;
+    font-size: 15px; 
+    margin-top: 1em;
+    border-radius: 0.5em;
+    background: yellow;
+    /* text-decoration: none; */ 
+}
