--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,15 @@
     justify-content: center;
 }
 
+.movies a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.movies a:hover {
+    color: red;
+}
+
 .movie {
     display: flex;
     flex-direction: column;
@@ -86,5 +95,5 @@
     margin-top: 1em;
     border-radius: 0.5em;
     background: yellow;
-    /* text-decoration: none; */ 
+    text-decoration: none; 
 }
