--- a/src/App.css
+++ b/src/App.css
@@ -74,3 +74,39 @@
 .center {
     text-align: center;
 }
+
+.movie-and-cast-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.movie-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.movie-details img {
+    border-radius: .5em;
+}
+
+.cast-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: flex-start;
+}
+
+.cast-members {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 1em;
+}
+
+.cast-member {
+    padding-bottom: 2em;
+}
