--- a/src/App.css
+++ b/src/App.css
@@ -29,8 +29,10 @@
     font-family: 'Righteous', cursive;
 }
 
-.nav-bar span {
+.nav-bar a {
     margin-right: 2em;
+    text-decoration: none;
+    color: black;
 }
 
 .home-page {
